Fix carousel overflowing into sibling grid

--- a/Theme.scss
+++ b/Theme.scss
@@ -7,6 +7,11 @@ html {
     width: 100% !important;
 }
 
+div[data-hveid="CAgQAQ"] {
+    padding: 30px;
+    margin-left: -30px;
+}
+
 @function getValInRange($min, $max, $t-param) {
     $val: (($t-param - 0) / (1 - 0) * ($max - $min)) + $min;
     @return $val;
